@@ -11,7 +11,7 @@ import sys
 import types
 
 import pyamf
-from pyamf import remoting, logging, util
+from pyamf import remoting, util
 
 SERVER_NAME = 'PyAMF/%s Python/%s' % (
     '.'.join(map(lambda x: str(x), pyamf.__version__)),
