@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Removed the useless pyamf.logging module (Ticket:577)
  - Added a new register_package helper function to make bulk class
    registration easier. Check the docstring for more info. (Ticket:576)
  - cpyamf.amf3._decode_int now propagates exceptions correctly (Ticket:506)
